<resources>
    <string name="app_name" translatable="false">DorkOut</string>
    <string name="content_authority" translatable="false">com.portfex.amazingday</string>
    <string name="title_activity_exercises">Exercises</string>

    <string name="workout_id_tag" translatable="false">exercise_id</string>

    <string name="lb_total_time">timeLD</string>
    <string name="lb_rest_time">rest</string>


    <string name="lb_workout_desc_exercises">Exercises:</string>
    <string name="lb_workout_desc_total_time">Total timePlan:</string>
    <string name="lb_workout_desc_days">Days:</string>
    <string name="lb_workout_desc_start_time">Start timePlan:</string>

    <string name="lb_last_result">Last result</string>
    <string name="lb_reps">Reps</string>
    <string name="lb_time">Time</string>
    <string name="lb_set">Set</string>
    <string name="lb_weight">Weight</string>
    <string name="lb_rest">Rest</string>

    <string name="lb_result_reps">Reps</string>
    <string name="lb_result_time">Time</string>
    <string name="lb_kg">kg</string>
    <string name="lb_th">th</string>
    <string name="lb_x">x</string>

    <string name="bt_empty">EMPTY</string>
    <string name="bt_restart">RESTART</string>
    <string name="bt_start">START</string>
    <string name="bt_pause">PAUSE</string>
    <string name="bt_finish">FINISH</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">CANCEL</string>

    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_save">Save</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>


    <string name="total_time">1:15</string>
    <string name="rest_time">5:16</string>

    <string name="workout_title">Mourning workout</string>
    <string name="workout_desc">Horizontal bar, jump, run</string>
    <string name="workout_desc_exercises">20</string>
    <string name="workout_desc_total_time">1:20</string>
    <string name="workout_desc_days">Mon Wed</string>
    <string name="workout_null_time">--:--</string>


    <string name="exercise_number">2.</string>
    <string name="exercise_title">Barbell</string>
    <string name="exercise_desc">Up and high, weightPlan: 11kg. mSets 3, reps 115 </string>
    <string name="exercise_null_time">--:--</string>

    <string name="norm_time">1:24</string>
    <string name="reps">31</string>
    <string name="sets">3</string>
    <string name="weight">10</string>
    <string name="rest">3:30</string>
    <string name="result_time">1:24:29</string>
    <string name="result_time_ms">9</string>
    <string name="set">3</string>
    <string name="result_reps">22</string>

    <string name="last_result_time">1:24:86</string>
    <string name="last_result_reps">40</string>

    <string name="lb_workout_create_days">Days</string>
    <string name="lb_workout_create_start_time">Start at</string>
    <string name="lb_workout_create_button">Create</string>
    <string name="lb_workout_update_button">Update</string>
    <string name="lb_workout_duplicate_button">Duplicate</string>
    <string name="lb_workout_delete_button">Delete</string>

    <string name="workout_create_name">Title</string>
    <string name="workout_create_desc">Any note</string>
    <string name="lb_exercise_create_days">workout Days</string>
    <string name="lb_exercise_create_start_time">Start at</string>
    <string name="lb_exercise_create_button">Create</string>
    <string name="lb_exercise_update_button">Update</string>
    <string name="lb_exercise_duplicate_button">Duplicate</string>
    <string name="lb_exercise_delete_button">Delete</string>

    <string name="exercise_create_name">Title</string>
    <string name="exercise_create_desc">Any note</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_exercises_edit">Edit…</string>
    <string name="menu_exercises_done">Done edit</string>

    <string name="title_activity_workouts">Workouts</string>
    <string name="title_activity_edit_workout">Edit Workout</string>
    <string name="title_activity_new_workout">New Workout</string>
    <string name="title_activity_add_edit_exercise">Edit Exercise</string>

    <string name="error_no_extra_found">Error Retrieving Workout Id</string>
    <string name="rename">Rename</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="bt_skip">skip</string>
    <string name="empty_time">--:--</string>
    <string name="bt_stop">stop</string>
    <string name="lb_distance">Distance</string>
</resources>
