<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/main_menu"
        android:menuCategory="secondary">
        <item
            android:id="@+id/menu_settings"
            android:orderInCategory="100"
            android:title="@string/menu_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_about"
            android:orderInCategory="100"
            android:title="@string/menu_about"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_donate"
            android:orderInCategory="100"
            android:title="@string/menu_donate"
            app:showAsAction="never" />
    </group>

</menu>