<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">


    <ImageView
        android:id="@+id/card_result_set"
        android:layout_width="0dp"
        android:layout_height="@dimen/result_high"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintEnd_toStartOf="@+id/card_result_reps"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_result" />

    <TextView
        android:id="@+id/lb_info_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lb_set"
        android:textAppearance="@style/result_label"
        app:layout_constraintEnd_toEndOf="@+id/card_result_set"
        app:layout_constraintTop_toTopOf="@+id/card_result_set"  />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textAppearance="@style/result_text"
        app:layout_constraintBottom_toBottomOf="@+id/card_result_set"
        app:layout_constraintEnd_toStartOf="@+id/lb_info_sets_u" />

    <TextView
        android:id="@+id/lb_info_sets_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/lb_x"
        android:textAppearance="@style/result_label"
        app:layout_constraintEnd_toEndOf="@+id/card_result_set"
        app:layout_constraintBaseline_toBaselineOf="@+id/set" />

    <ImageView
        android:id="@+id/card_result_reps"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="6"
        android:layout_height="@dimen/result_high"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toStartOf="@+id/card_result_time"
        app:layout_constraintStart_toEndOf="@id/card_result_set"
        app:srcCompat="@drawable/card_result" />

    <TextView
        android:id="@+id/lb_info_result_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lb_result_reps"
        android:textAppearance="@style/result_label"
        app:layout_constraintEnd_toEndOf="@+id/card_result_reps"
        app:layout_constraintTop_toTopOf="@+id/card_result_reps"  />


    <TextView
        android:id="@+id/result_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/result_reps"
        android:textAppearance="@style/result_text"
        app:layout_constraintBottom_toBottomOf="@+id/card_result_reps"
        app:layout_constraintEnd_toStartOf="@+id/lb_info_reps"/>

    <TextView
        android:id="@+id/lb_info_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lb_reps"
        android:textAppearance="@style/result_label"
        app:layout_constraintEnd_toEndOf="@+id/card_result_reps"
        app:layout_constraintBaseline_toBaselineOf="@+id/result_reps" />

    <ImageView
        android:id="@+id/card_result_time"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="12"
        android:layout_height="@dimen/result_high"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_result_reps"
        app:srcCompat="@drawable/card_result" />

    <TextView
        android:id="@+id/lb_info_result_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lb_result_time"
        android:textAppearance="@style/result_label"
        app:layout_constraintEnd_toEndOf="@+id/card_result_time"
        app:layout_constraintTop_toTopOf="@+id/card_result_time"  />

    <TextView
        android:id="@+id/result_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_time"
        android:textAppearance="@style/result_text"
        app:layout_constraintBottom_toBottomOf="@+id/card_result_time"
        app:layout_constraintEnd_toStartOf="@+id/result_time_ms" />
    <TextView
        android:id="@+id/result_time_ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/result_time_ms"
        android:textAppearance="@style/result_text_ms"
        app:layout_constraintBaseline_toBaselineOf="@+id/result_time"
        app:layout_constraintEnd_toEndOf="@+id/card_result_time" />



</android.support.constraint.ConstraintLayout>