<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workout_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="7dp"
    android:layout_marginTop="5dp"
    app:cardBackgroundColor="@color/workout_selections">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="14dp"

        >

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/workout_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:srcCompat="@drawable/gray_borders"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/workout_title"/>

        <TextView
            android:id="@+id/workout_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/lb_workout_desc_total_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/lb_workout_desc_exercises"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintTop_toBottomOf="@+id/workout_desc"
            app:layout_constraintStart_toEndOf="@id/workout_icon"
            tools:layout_editor_absoluteX="62dp" />

        <TextView
            android:id="@+id/workout_desc_exercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc_exercises"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_total_exercises"

            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_total_exercises" />

        <TextView
            android:id="@+id/lb_workout_desc_total_time"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/lb_workout_desc_total_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_total_exercises"
            app:layout_constraintLeft_toLeftOf="@+id/lb_workout_desc_total_exercises"
            tools:layout_editor_absoluteX="62dp" />

        <TextView
            android:id="@+id/workout_desc_total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc_total_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_total_time" />

        <TextView
            android:id="@+id/lb_workout_desc_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_workout_desc_days"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_total_time" />

        <TextView
            android:id="@+id/workout_desc_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/workout_desc_days"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_days"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_days" />

        <TextView
            android:id="@+id/lb_workout_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_workout_desc_start_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_days" />

        <TextView
            android:id="@+id/workout_desc_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/workout_null_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_start_time"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_start_time" />

        <ImageView
            android:id="@+id/workout_icon"
            android:layout_width="67dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_desc"
            app:srcCompat="@drawable/ic_training" />

        <ImageView
            android:id="@+id/workout_active_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/workout_icon"
            app:layout_constraintEnd_toEndOf="@+id/workout_icon"
            app:srcCompat="@drawable/lamp_green" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>