<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/bt_restart"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:text="@string/bt_skip"
        android:layout_weight="1"
 />

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_exercise_panel_status_lamp"
        android:textColor="@color/status_button_text"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="16dp"
        android:text="Go!"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/bt_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/bt_stop"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/bt_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/bt_done"
        android:layout_weight="1"/>

</LinearLayout>