<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="6dp"
    app:cardBackgroundColor="@color/workout_item">


    android:background="@color/workout_item">
<!--<android.support.v7.widget.CardView -->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->

    <!--android:layout_marginLeft="4dp"-->
    <!--android:layout_marginRight="4dp"-->
    <!--android:layout_marginTop="6dp"-->
    <!--app:contentPadding="8dp">-->

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"

        >

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/workout_title"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/workout_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_title" />

        <TextView
            android:id="@+id/lb_workout_desc_total_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/lb_workout_desc_exercises"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_desc" />

        <TextView
            android:id="@+id/workout_desc_exercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc_exercises"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_total_exercises"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_total_exercises" />

        <TextView
            android:id="@+id/lb_workout_desc_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/lb_workout_desc_total_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_total_exercises" />

        <TextView
            android:id="@+id/workout_desc_total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workout_desc_total_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_total_time" />

        <TextView
            android:id="@+id/lb_workout_desc_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_workout_desc_days"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_total_time" />

        <TextView
            android:id="@+id/workout_desc_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/workout_desc_days"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_desc_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_desc_days" />

        <TextView
            android:id="@+id/lb_workout_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lb_workout_desc_start_time"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintStart_toStartOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_desc_days" />

        <TextView
            android:id="@+id/workout_desc_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/workout_null_start_time"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/small_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/lb_workout_start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lb_workout_start_time" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_content_paste_black_24dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workout_desc"
            app:layout_constraintEnd_toStartOf="@+id/lb_workout_desc_total_time"
            app:layout_constraintStart_toStartOf="parent"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/gray_borders"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/lb_workout_start_time"

/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>