<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/red_lamp"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/lamp_red" />

        <ImageView
            android:id="@+id/yellow_lamp"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/lamp_red" />

        <ImageView
            android:id="@+id/green_lamp"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/lamp_red" />
    </LinearLayout>


    <TextView
        android:id="@+id/lb_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/secondary_white_text"
        android:textSize="@dimen/small_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lb_total_time" />

    <TextView
        android:id="@+id/lb_rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:textColor="@color/secondary_white_text"
        android:textSize="@dimen/small_label_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lb_rest_time" />

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/status_digit"
        android:textSize="@dimen/status_digit"
        app:layout_constraintStart_toEndOf="@+id/pb_total_time"
        app:layout_constraintTop_toBottomOf="@+id/lb_total_time"
        android:text="@string/total_time" />

    <TextView
        android:id="@+id/rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/status_digit"
        android:textSize="@dimen/status_digit"
        app:layout_constraintEnd_toStartOf="@+id/pb_rest_time"
        app:layout_constraintTop_toBottomOf="@+id/lb_rest_time"
        android:text="@string/rest_time" />

    <ProgressBar
        android:id="@+id/pb_total_time"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_rest_time"
        tools:layout_editor_absoluteY="16dp" />

    <ProgressBar
        android:id="@+id/pb_rest_time"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_rest_time"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>